--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <div class="col-md-12">
         <div class="card bg-dark">
           <div class="card-header">
-            <h4 class="card-title text-center"><button class="btn btn-warning p-4 text-dark disabled">¿Qué plaga
-                tengo?</button>
+            <h4 class="card-title text-center"><button class="btn btn-warning p-2 text-dark disabled"><i
+                  class="fa fa-bug"></i> ¿Qué plaga tengo?</button>
             </h4>
           </div>
           <div class="card-body">
@@ -74,30 +74,32 @@
                 <div class="row">
                   <div class="col text-center mb-4">
                     <h1 class="d-inline-block mr-4"><i class="fa fa-plus mt-5 text-white"></i></h1>
-                    <button class="btn btn-warning p-4 text-dark disabled">
-                      ¿De qué tamaño es mi casa?
+                    <button class="btn btn-warning p-2 text-dark disabled">
+                      <h4 class="font-weight-bold">
+                        <i class="fa fa-home"></i> ¿De qué tamaño es mi casa?
+                      </h4>
                     </button>
                   </div>
                 </div>
                 <div class="row" id="houseRow">
                   <div class="col">
                     <button class="btn btn-primary p-4" name="houseSize[]" id="smallHouse" value="0">
-                      Chica<br>1 piso<br>1-2 habitaciones<br>Menos de 60 m<br>$0*
+                      Chica<br>1 piso<br>1-2 habitaciones<br>Menos de 60 m2<br>$0*
                     </button>
                   </div>
                   <div class="col">
                     <button class="btn btn-primary p-4" name="houseSize[]" id="mediumHouse" value="100">
-                      Mediana<br>2 pisos<br>2-3 habitaciones<br>Menos de 80 m<br>$100*
+                      Mediana<br>2 pisos<br>2-3 habitaciones<br>Menos de 80 m2<br>$100*
                     </button>
                   </div>
                   <div class="col">
                     <button class="btn btn-primary p-4" name="houseSize[]" id="bigHouse" value="200">
-                      Grande<br>2 pisos<br>3-4 habitaciones<br>Menos de 300 m<br>$200*
+                      Grande<br>2 pisos<br>3-4 habitaciones<br>Menos de 300 m2<br>$200*
                     </button>
                   </div>
                   <div class="col">
                     <button class="btn btn-primary p-4" name="houseSize[]" id="veryBigHouse" value="300">
-                      Muy grande<br>2 o más pisos<br>3 o más habitaciones<br>Más de 300 m<br>$300
+                      Muy grande<br>2 o más pisos<br>3 o más habitaciones<br>Más de 300 m2<br>$300
                       o más*
                     </button>
                   </div>
@@ -105,8 +107,10 @@
                 <div class="row">
                   <div class="col text-center mb-4">
                     <h1 class="d-inline-block mr-4"><i class="fa fa-plus mt-5 text-white"></i></h1>
-                    <button class="btn btn-warning p-4 text-dark disabled">
-                      ¿A qué distancia se encuentra mi casa del centro de la ciudad?
+                    <button class="btn btn-warning p-2 text-dark disabled">
+                      <h4 class="font-weight-bold">
+                        <i class="fa fa-road"></i> ¿A qué distancia se encuentra <br> mi casa del centro de la ciudad?
+                      </h4>
                     </button>
                   </div>
                 </div>
