--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
                     <div class="slider-bg">
                         <div class="row no-gutters align-items-center">
                             <div class="col-lg-4 col-md-5">
-                                <div class="slider-product-image d-md-block">
+                                <div class="slider-product-image">
                                     <img src="assets/images/slider/1.jpg" alt="Slider">
-                                    <div class="slider-discount-tag d-none d-md-block">
+                                    <div class="slider-discount-tag">
                                         <p>COTIZAR<br> GRATIS</p>
                                     </div>
                                 </div>
@@ -130,10 +130,10 @@
                     <div class="slider-bg">
                         <div class="row no-gutters align-items-center">
                             <div class="col-lg-4 col-md-5">
-                                <div class="slider-product-image d-md-block">
+                                <div class="slider-product-image">
                                     <img src="assets/images/slider/3.jpg" alt="Slider">
-                                    <div class="slider-discount-tag d-none d-md-block">
-                                        <p>Control de</span> roedores</p>
+                                    <div class="slider-discount-tag">
+                                        <p>CONTROL DE</span> ROEDORES</p>
                                     </div>
                                 </div>
                             </div>
@@ -156,9 +156,9 @@
                     <div class="slider-bg">
                         <div class="row no-gutters align-items-center ">
                             <div class="col-lg-4 col-md-5">
-                                <div class="slider-product-image d-md-block">
+                                <div class="slider-product-image">
                                     <img src="assets/images/slider/2.jpg" alt="Slider">
-                                    <div class="slider-discount-tag d-none d-md-block">
+                                    <div class="slider-discount-tag">
                                         <p>PRODUCTOS DE USO <br> URBANO</p>
                                     </div>
                                 </div>
