--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
                             <div class="col-lg-8 col-md-7">
                                 <div class="slider-product-content">
                                     <h1 class="slider-title mb-10" data-animation="fadeInUp" data-delay="0.3s">
-                                        <span>Obtenga</span> una cotización <span>gratis</span></h1>
+                                        <span>Obtenga</span> una cotización <span>gratis</span>
+                                    </h1>
                                     <!-- <p class="mb-25" data-animation="fadeInUp" data-delay="0.9s">One day however a small
                                         line of blind text by the name of Lorem Ipsum <br> decided to leave for the far
                                         World of Grammar.</p> -->
@@ -219,66 +220,91 @@
                                 <img src="assets/images/showcase/service-2.jpg" alt="">
                             </div>
                             <div class="product-content">
-                                <h4 class="content-title mb-15 text-white">¡Puede estar seguro que nuestro personal está
-                                    capacitado <br> para utilizar el método de aplicación más eficiente <br> dependiendo
-                                    de cada caso y plaga para garantizar siempre excelentes resultados!
+                                <h4 class="content-title mb-15 text-white d-none d-sm-block">¡Puede estar seguro que
+                                    nuestro personal está capacitado <br> para utilizar el método de aplicación más
+                                    eficiente <br> dependiendo de cada caso y plaga para garantizar siempre excelentes
+                                    resultados!
                                 </h4>
                             </div>
+                            <p class="d-sm-none d-block mt-1">¡Puede estar seguro que nuestro personal está capacitado
+                                para utilizar el método de aplicación más eficiente dependiendo de cada caso y
+                                plaga para garantizar siempre excelentes resultados!
+                            </p>
                         </div>
                         <div class="single-discount-product mt-30">
                             <div class="product-image">
                                 <img src="assets/images/showcase/service-1.jpg" alt="Termonebulización">
                             </div>
                             <div class="product-content">
-                                <h4 class="content-title mb-15">Contamos con servicio de TERMONEBULIZACIÓN para
-                                    casos delicados <br> con altas infestaciones de insectos o lugares de difícil
-                                    acceso.
+                                <h4 class="content-title d-none d-sm-block mb-15">Contamos con servicio de
+                                    TERMONEBULIZACIÓN para casos delicados <br> con altas infestaciones de insectos o
+                                    lugares de difícil acceso.
                                 </h4>
                             </div>
+                            <p class="d-sm-none d-block mt-1">Contamos con servicio de TERMONEBULIZACIÓN para
+                                casos delicados con altas infestaciones de insectos o lugares de difícil
+                                acceso.
+                            </p>
                         </div>
                         <div class="single-discount-product mt-30">
                             <div class="product-image">
                                 <img src="assets/images/showcase/service-3.jpg" alt="">
                             </div>
-                            <div class="product-content">
+                            <div class="product-content d-none d-sm-block">
                                 <h4 class="content-title mb-15">El control de plagas en ambientes siempre
                                     será un buen aliado <br> para contrarrestar infestaciones de voladores y rastreros.
                                 </h4>
                             </div>
+                            <p class="d-sm-none d-block mt-1">El control de plagas en ambientes siempre
+                                será un buen aliado para contrarrestar infestaciones de voladores y rastreros.
+                            </p>
                         </div>
                         <div class="single-discount-product mt-30">
                             <div class="product-image">
                                 <img src="assets/images/showcase/service-4.jpg" alt="">
                             </div>
                             <div class="product-content">
-                                <h4 class="content-title mb-15 text-white">En FUMINIX conocemos bien el actuar de los
-                                    insectos y gracias <br> a ello tenemos la certeza de poder controlar <br>
-                                    prácticamente cualquier problema de plaga <br> para que usted no tenga que lidiar
-                                    con este problema.
+                                <h4 class="content-title mb-15 text-white d-none d-sm-block">En FUMINIX conocemos bien
+                                    el actuar de los insectos y gracias <br> a ello tenemos la certeza de poder
+                                    controlar <br> prácticamente cualquier problema de plaga <br> para que usted no
+                                    tenga que lidiar con este problema.
                                 </h4>
                             </div>
+                            <p class="d-sm-none d-block mt-1">En FUMINIX conocemos bien el actuar de los insectos y
+                                gracias a ello tenemos la certeza de poder controlar prácticamente cualquier problema de
+                                plaga para que usted no tenga que lidiar con este problema.
+                            </p>
                         </div>
                         <div class="single-discount-product mt-30">
                             <div class="product-image">
                                 <img src="assets/images/showcase/service-5.jpg" alt="">
                             </div>
                             <div class="product-content">
-                                <h4 class="content-title mb-15">Le ofrecemos servicio integral MIP para su
-                                    restaurante. <br> Únicamente con productos de grado alimenticio. <br> Contamos con
-                                    licencia sanitaria para poder ofrecerle certificación en su servicio.
+                                <h4 class="content-title mb-15 d-none d-sm-block">Le ofrecemos servicio integral MIP
+                                    para su restaurante. <br> Únicamente con productos de grado alimenticio. <br>
+                                    Contamos con licencia sanitaria para poder ofrecerle certificación en su servicio.
                                 </h4>
                             </div>
+                            <p class="d-sm-none d-block mt-1">Le ofrecemos servicio integral MIP para su
+                                restaurante. Únicamente con productos de grado alimenticio. Contamos con
+                                licencia sanitaria para poder ofrecerle certificación en su servicio.
+                            </p>
                         </div>
                         <div class="single-discount-product mt-30">
                             <div class="product-image">
                                 <img src="assets/images/showcase/service-6.jpg" alt="">
                             </div>
                             <div class="product-content">
-                                <h4 class="content-title mb-15">¡En ocasiones podemos tener en casa problemas <br>
+                                <h4 class="content-title d-none d-sm-block mb-15">¡En ocasiones podemos tener en casa
+                                    problemas <br>
                                     más graves de lo que pensamos sin darnos cuenta! <br> Puede estar segudo de que
                                     tenemos la experiencia para detectarlos.
                                 </h4>
                             </div>
+                            <p class="d-sm-none d-block mt-1">¡En ocasiones podemos tener en casa problemas más graves
+                                de lo que pensamos sin darnos cuenta! Puede estar segudo de que tenemos la experiencia
+                                para detectarlos.
+                            </p>
                         </div>
                         <div class="single-discount-product mt-30">
                             <div class="product-image">
@@ -328,6 +354,8 @@
             <div class="footer-widget pt-75 pb-120">
                 <div class="row">
                     <div class="col-12 text-center">
+                        <a class="main-btn" href="quote/index.html" data-animation="fadeInUp" data-delay="1.5s"
+                            tabindex="0" style="animation-delay: 1.5s;">Cotizar <i class="lni-chevron-right"></i></a>
                         <div class="footer-logo mt-40">
                             <a href="#">
                                 <img src="assets/images/logo.png" alt="Logo">
@@ -419,15 +447,6 @@
     <a href="#" class="back-to-top"><i class="lni-chevron-up"></i></a>
 
     <!--====== BACK TO TOP PART ENDS ======-->
-
-
-
-
-
-
-
-
-
 
     <!--====== jquery js ======-->
     <script src="assets/js/vendor/modernizr-3.6.0.min.js"></script>
