--- a/quote/index.html
+++ b/quote/index.html
@@ -6,7 +6,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
-    Guía de precios para servicio de fumigación
+    Fuminix - Guía de precios para servicio de fumigación
   </title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no'
     name='viewport' />
@@ -16,11 +16,15 @@
   <!-- CSS Files -->
   <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
   <link href="assets/css/paper-dashboard.css?v=2.0.1" rel="stylesheet" />
+  <link rel="shortcut icon" href="../assets/images/favicon.png" type="image/png">
 </head>
 
 <body class="">
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-absolute fixed-top bg-primary">
+    <a class="navbar-brand" href="index.html">
+      <img src="../assets/images/logo2.png" alt="Logo">
+    </a>
     <a class="navbar-brand text-dark"><strong>Guía de precios para servicio de fumigación</strong></a>
   </nav>
   <!-- End Navbar -->
