Added top margin to quote interface

--- a/quote/index.html
+++ b/quote/index.html
@@ -36,7 +36,7 @@
       <div class="col-md-12">
         <div class="card bg-dark">
           <div class="card-header">
-            <h4 class="card-title text-center"><button class="btn btn-warning p-2 text-dark disabled"><i
+            <h4 class="card-title text-center mt-4"><button class="btn btn-warning p-2 text-dark disabled"><i
                   class="fa fa-bug"></i> ¿Qué plaga tengo?</button>
             </h4>
           </div>
