--- a/quote/index.html
+++ b/quote/index.html
@@ -22,7 +22,7 @@
 <body class="">
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-absolute fixed-top bg-primary">
-    <a class="navbar-brand" href="index.html">
+    <a class="navbar-brand" href="../index.html">
       <img src="../assets/images/logo2.png" alt="Logo">
     </a>
     <a class="navbar-brand text-dark"><strong>Guía de precios para servicio de fumigación</strong></a>
