--- a/quote/index.html
+++ b/quote/index.html
@@ -168,6 +168,19 @@
       </div>
     </div>
   </div>
+
+  <div class="modal fade" id="messagesModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-body"><span id="textMessage"></span></div>
+        <div class="modal-footer">
+          <button class="btn btn-dark" type="button" data-dismiss="modal">Aceptar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!--   Core JS Files   -->
   <script src="assets/js/core/jquery.min.js"></script>
   <script src="assets/js/index.js"></script>
